--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,16 @@ body {
 	padding: 0;
 	margin: 0;
 }
+
+* {
+	scrollbar-color: #5a4ad2;
+}
+
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 20px;
+	border: 5px solid #3f329d;
+}
